--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -28,6 +28,7 @@
 \newtheorem{thm}{Theorem}[chapter]
 \newtheorem{lem}[thm]{Lemma}
 \newtheorem{prop}[thm]{Proposition}
+\newtheorem{cor}[thm]{Corollary}
 
 \theoremstyle{definition}
 \newtheorem{defn}[thm]{Definition}
@@ -71,6 +72,9 @@
     \pagenumbering{arabic}
     \begin{chapter}{Preliminaries on topology}
         \subfile{sections/1}
+    \end{chapter}
+    \begin{chapter}{Simplicial Neural Networks}
+        \subfile{sections/2}
     \end{chapter}
     \newpage
     \printbibliography[heading = bibintoc]
