--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -1,13 +1,19 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \begin{section}{Simplicial complexes} 
-        \subfile{sections/1/1}    
+    \begin{section}{Category Theory}
+        \subfile{sections/1/1}   
     \end{section}
-    \begin{section}{Simplicial chains and cochains}
+    \begin{section}{Simplicial complexes} 
         \subfile{sections/1/2}    
     \end{section}
-    \begin{section}{Laplacian operators}
-        \subfile{sections/1/3} 
+    \begin{section}{Simplicial Homology}
+        \subfile{sections/1/3}    
+    \end{section}
+    \begin{section}{Simplicial Cohomology}
+        \subfile{sections/1/4} 
+    \end{section}
+    \begin{section}{Laplacian Operators}
+        \subfile{sections/1/5}
     \end{section}
 \end{document}
