--- a/tesi/sections/1/4.tex
+++ b/tesi/sections/1/4.tex
@@ -1,3 +1,31 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
+
+    \begin{defn}[Dual contravariant functor]
+    \end{defn}
+
+    \begin{defn}[Forms on simplicial complexes( The dual of chains )]
+    \end{defn}
+
+    \begin{defn}[Coboundary operator]
+    \end{defn}
+
+    \begin{defn}[Cohomology group]
+    \end{defn}
+
+    \begin{thm}[Homomorphism between homology and cohomology groups]
+    \end{thm}
+
+    \begin{defn}[Integration on chains as a scalar product]
+    \end{defn}
+
+    \begin{defn}[Exterior discrete derivative as a dual representation of the coboundary operator]
+    \end{defn}
+    % genralized Stokes theorem
+
+    \begin{defn}[Adjoint exterior derivative]
+    \end{defn}
+
+    \cite{simplicialNN}
+
 \end{document}
