--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -5,11 +5,21 @@
     year = {1988},
     publisher = {Springer-Verlag New York}
 }
+
+@book{hatcher,
+      author        = "Hatcher, Allen",
+      title         = "{Algebraic Topology}",
+      publisher     = "Cambridge Univ. Press",
+      year          = "2000",
+}
+
+
 @misc{simplicialNN,
     title={Simplicial Neural Networks}, 
     author={S. Ebli and M. Defferrard and G. Spreemann},
     year={2020}
 }
+
 @misc{DEC,
     title={Discrete Exterior Calculus}, 
     author={M. Desbrun and A. N. Hirani and M. Leok and J. E. Marsden},
