--- a/tesi/sections/1/5.tex
+++ b/tesi/sections/1/5.tex
@@ -1,3 +1,17 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
+    
+    \begin{defn}[Laplacian]
+    \end{defn}
+
+    \begin{prop}[The laplacian is self adjoint]
+    \end{prop}
+
+    \begin{prop}[The laplacian is positive definite]
+    \end{prop}
+
+    \begin{thm}[The kernel of the laplacian is isomorphic to the reduced homology group]
+    \end{thm}
+    \cite{DEC}
+
 \end{document}
