--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -51,6 +51,9 @@
 \newcommand{\mf}[1]{\mathfrak{#1}}
 \newcommand{\bmc}[1]{\textbf\mathcal{#1}}
 \newcommand{\scal}[2]{\langle #1, #2 \rangle}
+\newcommand{\bra}[1]{\langle #1 |}
+\newcommand{\ket}[1]{| #1 \rangle}
+\newcommand{\braket}[2]{\langle #1 | #2 \rangle}
 \newcommand{\del}{\partial}
 
 \begin{document}
