--- a/tesi/sections/1/2.tex
+++ b/tesi/sections/1/2.tex
@@ -160,7 +160,7 @@
     \end{defn}
 
     \begin{thm}
-        Let $\mc{A}$ be a d-dimentional abstract simplicial complex, it admits a geometric realization in $\R^{2d+1}$.
+        Let $\mc{A}$ be a d-dimensional abstract simplicial complex, it admits a geometric realization in $\R^{2d+1}$.
     \end{thm}
     Kuratowski theorem proves the prevuois statement to be also sharp.\\
     \hfill \\
