--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -4,7 +4,7 @@
     \begin{section}{Category Theory}
         \subfile{sections/1/1}   
     \end{section}
-    \begin{section}{Simplicial complexes} 
+    \begin{section}{Simplicial Complexes} 
         \subfile{sections/1/2}    
     \end{section}
     \begin{section}{Simplicial Homology}
