--- a/tesi/sections/1/5.tex
+++ b/tesi/sections/1/5.tex
@@ -28,7 +28,7 @@
         Let then $\Delta^-_p\ket{\sigma} = \lambda^-_\sigma \ket{\sigma}$, we see that
         \[ \braket{\sigma}{\Delta^-_p\sigma} = \braket{\del_p\sigma}{\del_p\sigma} \geq 0 \]
         \[ \braket{\sigma}{\Delta^-_p\sigma} = \lambda^-_\sigma\braket{\sigma}{\sigma} \geq 0 \implies \lambda-_\sigma \geq 0.\]
-        Furthermore, since $\Delta^+_p\Delta-_p = \Delta^-_p\Delta^+_p = 0$ we have that $[\Delta^+_p,\Delta^-_p] = 0$, thence
+        Furthermore, since $\Delta^+_p\Delta^-_p = \Delta^-_p\Delta^+_p = 0$ we have that $[\Delta^+_p,\Delta^-_p] = 0$, thence
         $[\Delta_p, \Delta^\pm_p] = 0$, therefore $\Delta_p, \Delta^+_p, \Delta^-_p$ share a basis of eigenchains.
         Let $\ket{\sigma}$ be in that common basis then $\Delta_p\ket{\sigma} = \lambda_\sigma\ket{\sigma}$, where
         $\lambda_\sigma = \lambda^+_\sigma + \lambda^-_\sigma \geq 0$.
