--- a/tesi/sections/2/2.tex
+++ b/tesi/sections/2/2.tex
@@ -1,4 +1,13 @@
 \documentclass[../2.tex]{subfiles}
 \begin{document}
-    
-\end{document}
+    \begin{defn}[convolution on a simplicial complex]
+    \end{defn}
+    \begin{defn}[heat equation on a simplicial complex]
+    \end{defn}
+    \begin{defn}[pooling on a simplicial complex]
+    \end{defn}
+    \begin{defn}[pooling on a graph]
+    \end{defn}
+    \begin{defn}[simplicialNN]
+    \end{defn}
+ \end{document}
