--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -18,11 +18,7 @@
         \end{enumerate}
     \end{defn}
 
-    \begin{thm}
-        Topological spaces and continuous functions are a category \bb{Top}, whose equivalences are called homeomorphisms.
-    \end{thm}
-
-    Instead of writing $f \in Hom(A,B)$, we usually write $f : A \to B$. For other examples of categories see \cite{rotman}.
+    Instead of writing $f \in Hom(A,B)$, we usually write $f : A \to B$. 
 
     \begin{defn}
         Let $\bb{A}$ and $\bb{C}$ be categories, a \ii{functor} $T : \bb{A} \to \bb{C}$ is a function, that is, 
@@ -50,5 +46,13 @@
         We apply $T$ to the equations $ f \circ g = 1_B$ and $ g \circ f = 1_A$, that for a covariant functor leads to 
         $(Tf) \circ (Tg) = T(1_B) = 1_{TB}$ and $(Tg) \circ (Tf) = T(1_A) = 1_{TA}$.
     \end{proof}
+
+    A category that will be used in the following section is the category of topological spaces and continuous functions.
+
+    \begin{thm}
+        Topological spaces and continuous functions are a category \bb{Top}, whose equivalences are called homeomorphisms.
+    \end{thm}
+
+    Other examples of categories can be found in \cite{rotman}.
 
 \end{document}
