--- a/tesi/sections/1/2.tex
+++ b/tesi/sections/1/2.tex
@@ -46,7 +46,7 @@
     One denotes the vertex set $\{ x_i \}_{i \in I}$ of a simplex $\sigma = [ x_i ]_{i \in I}$ by $Vert(\sigma)$.
     
     \begin{defn}
-        Let $\sigma$ be a $p-simplex$, we say that another t-simplex $\tau$ is a \ii{face} of $\sigma$ or equivalently 
+        Let $\sigma$ be a p-simplex, we say that another t-simplex $\tau$ is a \ii{face} of $\sigma$ or equivalently 
         that $\sigma$ is a \ii{coface} of $\tau$, by our notiation $\tau \leq \sigma$, if and only if $\tau \subset \sigma$, where $t \leq p$.
     \end{defn}
 
