--- a/tesi/sections/1/3.tex
+++ b/tesi/sections/1/3.tex
@@ -4,37 +4,51 @@
 
     An important field in algebraic topology is homology theory. We shall discuss homology theory to the extent
     that allows us to define the laplacian operator on simplicial complexes, for further readings see \cite{hatcher}.
+    Firstly we want to equip our simplicial complexes with an orientation.
+
     \begin{defn}
         An \ii{oriented} simplicial complex $\mc{A}$ is a simplicial complex and a partial order on $Vert(\mc{A})$ whose
         restriction to the vertices of any simplex in $\mc{A}$ is a linear order.
     \end{defn}
 
+    Secondly we define on the simplicial complex a vector space structure.
+
     \begin{defn}
         Let $\mc{A}$ be an oriented simplicial complex, on $\mc{A}$ we define a formal sum in order
         to obtain a vector space on the real numbers, that is
         \[ C_p(\mc{A}) := \{ \sum_i \lambda_i \sigma_i^p \quad \lambda_i \in \R \},\]
-        where $\sigma_i^p$ are oriented p-simplexes of $\mc{A}$.\\
+        where $\sigma_i^p$ are oriented p-simplexes of $\mc{A}$.\\ % The action boundary operator can be visually interpreted as in the following figure.\\
+        % \includegraphics[width = 12cm, height = 6cm]{sections/1/boundary}
         All $\sigma_i^p = [v_0,\dots,v_p]$ can have two possible orientations that satisfy
         $ [v_0,\dots,v_p] = sgn (\pi)[v_{\pi 0},\dots,v_{\pi p}]$,
-        where $\pi$ is a permutation of $\{0,\dots,p\}$.        
+        where $\pi$ is a permutation of $\{0,\dots,p\}$.  
+        We shall call $C_p$ the space of \ii{simplicial p-chains}.      
     \end{defn}
 
+    In the study of chains' spaces a special role is played by a particular linear operator called
+    boundary operator.
+
     \begin{defn}
-        We define the linear operator $\del_{p+1} : C_{p+1} \to C_p$ by setting
+        We define the \ii{boundary} operator $\del_{p+1} : C_{p+1} \to C_p$ by setting
         \[ \del_{p+1}([v_0,\dots,v_p]) = \sum_{i=0}^p (-1)^i[v_0,\dots,\hat{v_i},\dots,v_p] \]
         (where $\hat{v_i}$ means delete the vertex $v_i$) and extending by linearity.
     \end{defn}
 
-    % The action boundary operator can be visually interpreted as in the following figure.\\
-    % \includegraphics[width = 12cm, height = 6cm]{sections/1/boundary}
+   The set of all chains' spaces with their respective boundary operators is a special category that we call a \ii{chain complex},
+   the property that defines a chain complex is the following.
 
     \begin{thm}
         $\del^2 = 0$.
     \end{thm}
     \begin{proof}
         Let $\del_{p+1}([v_0,\dots,v_{p+1}]) = \sum_{i=0}^{p+1} (-1)^i[v_0,\dots,\hat{v_i},\dots,v_{p+1}]$ then 
-        \[\del_p(\del_{p+1}([v_0,\dots,v_{p+1}])) =\sum_{j=0, j \neq i}^{p+1} \sum_{i=0}^{p+1} (-1)^{i+j}[v_0,\dots,\hat{v_i},\dots,\hat{v_j},\dots,v_{p+1}] = 0.\]        
+        \[\del_p(\del_{p+1}([v_0,\dots,v_{p+1}])) =\sum_{j=0, j \neq i}^{p+1} \sum_{i=0}^{p+1} (-1)^{i+j}[v_0,\dots,\hat{v_i},\dots,\hat{v_j},\dots,v_{p+1}] = 0.\]     
     \end{proof}
+
+    We are interested in boundary operators because they allow us to define the p-holes, which mathematically can be thought as the
+    p-cycles, p-chains that have no boundary, that are not boundary of any higher dimensional simplex. It is possible to show that the
+    p-holes form a vector space and if two simplicial complex are isomorphic also their p-holes' spaces are. This, given what we said in the previous section,
+    allows us to decide if two topological spaces are not homeomorphic by looking at the p-holes' spaces of their triangulations.
 
     \begin{defn}
         We define the \ii{p-homology group} to be 
