--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -1,10 +1,9 @@
 \documentclass[../2.tex]{subfiles}
 \begin{document}
     The goal of machine learning is teaching machines to approximate expert observers.
-    Thinking of the space of possible machines as possibly convex and compact, we can say that we are able to define every possible machine
-    via a finite number of parameters and that by varying those parameters we can be able to find a unique best approximation of this observer.
-    In a world where technology leads and science can hardly keep up with the new technological discoveries, we are sad to claim that a clear mathematical
-    explanation of the reason why such deep learning architectures are so successful is missing.
+    Thinking of the space of possible machines as possibly convex and compact, one is able by varying a
+    finite number of parameters to find a unique best approximation of any expert observer.
+    The rappresentation of a random initialized machine is 
     
     \begin{defn}[relu]
     \end{defn}
