--- a/tesi/sections/2/2.tex
+++ b/tesi/sections/2/2.tex
@@ -1,5 +1,6 @@
 \documentclass[../2.tex]{subfiles}
 \begin{document}
+    Applications of simplicial complexes
     \begin{defn}[convolution on a simplicial complex]
     \end{defn}
     \begin{defn}[heat equation on a simplicial complex]
