--- a/tesi/sections/1/5.tex
+++ b/tesi/sections/1/5.tex
@@ -1,10 +1,15 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
+
+    An important role in the definition of a convolution on simplicial complexes is played by the Laplaciano operator,
+    especially by its eigenfunctions and spectrum.
     
     \begin{defn}
         We define the \ii{p-Laplacian} operator to be 
         \[ \Delta_p = \del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p =: \Delta^+_p + \Delta^-_p.\]
     \end{defn}
+
+    The Laplacian operator is defined to be self-adjoint and positive definite.
 
     \begin{prop}
         $\Delta^\dagger_p = \Delta_p.$
@@ -15,6 +20,7 @@
         \[ = \braket{(\del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p)^\dagger\sigma}{\tau} = \]
         \[ = \braket{(\del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p)\sigma}{\tau} = \braket{\Delta_p\sigma}{\tau}. \]
     \end{proof}
+
     According to the spectral theorem there exists a basis of eigenchains of the Laplacian, and since all $\Delta_p, \Delta^+_p, \Delta^-_p$
     are self-adjoint we can say that they all admit a basis of eigenchains.
 
@@ -34,19 +40,23 @@
         $\lambda_\sigma = \lambda^+_\sigma + \lambda^-_\sigma \geq 0$.
     \end{proof}
 
-    \begin{thm}[Eckmann's Theorem]
+    Another really interesting property that was first proven by Beno Eckmann in 1944, is that the kernel of the p-Laplacian
+    is isomorphic to the p-homology group.
+
+    \begin{thm}
         $ker\Delta_p \simeq H_p$.
     \end{thm}
     \begin{proof}
-        \[ \Delta_p = \del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p =: \Delta^+_p + \Delta^-_p\]
-        \[  \Delta^+_p\Delta-_p = \Delta^-_p\Delta^+_p = 0 (hom.lem.) \implies ker\Delta^{\pm}_p \subset im\Delta^{\mp}_p  \]
-        \[ ker\Delta_p = ker\Delta^+_p \cap ker\Delta^-_p \]
-        \[ ker\del^\dagger_{p+1} \cap ker\del_p \subset ker\Delta_p(trivial) \]
-        \[ \del^\dagger_{p+1}\sigma \in im\del^\dagger_{p+1},\sigma \in ker\Delta_p \implies \del^\dagger_{p+1}\sigma \in ker\del_{p+1} = (im\del^\dagger_{p+1})^\perp\]
-        \[ \del_p\sigma \in im\del_p,\sigma \in ker\Delta_p \implies \del_p\sigma \in ker\del^\dagger_p= (im\del_p)^\perp\]
-        \[ \del_p\sigma = \del^\dagger_{p+1}\sigma \subset im\del^\dagger_{p+1} \cap (im\del^\dagger_{p+1})^\perp = im\del_p \cap (im\del_p)^\perp = 0\]
-        \[ ker\Delta_p = ker\del^\dagger_{p+1} \cap ker\del_p = (im\del_{p+1})^\perp \cap ker\del_p \simeq H_p\]
+        We have \[ \Delta_p = \del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p =: \Delta^+_p + \Delta^-_p.\]
+        According to Theorem 1.29 it is true that
+        \[  \Delta^+_p\Delta-_p = \Delta^-_p\Delta^+_p = 0\implies ker\Delta^{\pm}_p \subset im\Delta^{\mp}_p.\]
+        It is trivial to see that since $ker\Delta_p = ker\Delta^+_p \cap ker\Delta^-_p $
+        \[ ker\del^\dagger_{p+1} \cap ker\del_p \subset ker\Delta_p,\] less trivial is the opposite inclusion:
+        \[ \del^\dagger_{p+1}\sigma \in im\del^\dagger_{p+1},\sigma \in ker\Delta_p \implies \del^\dagger_{p+1}\sigma \in ker\del_{p+1} = (im\del^\dagger_{p+1})^\perp,\]
+        \[ \del_p\sigma \in im\del_p,\sigma \in ker\Delta_p \implies \del_p\sigma \in ker\del^\dagger_p= (im\del_p)^\perp,\]
+        \[ \del_p\sigma = \del^\dagger_{p+1}\sigma \subset im\del^\dagger_{p+1} \cap (im\del^\dagger_{p+1})^\perp = im\del_p \cap (im\del_p)^\perp = 0,\]
+        therefore $ker\del^\dagger_{p+1} \cap ker\del_p \subset ker\Delta_p$. Finally we notice that
+        \[ ker\Delta_p = ker\del^\dagger_{p+1} \cap ker\del_p = (im\del_{p+1})^\perp \cap ker\del_p \simeq H_p.\]
     \end{proof}
-    \cite{DEC}
 
 \end{document}
